--- a/public/package.json
+++ b/public/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "public",
+  "name": "ai-avatar-interview-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,10 +16,6 @@
     "@daily-co/daily-js": "^0.55.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
