connected and implemented rag

--- a/pipecat-quickstart/.env
+++ b/pipecat-quickstart/.env
@@ -7,3 +7,11 @@ SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZi
 
 # Optional: Connect via Daily WebRTC locally
 DAILY_API_KEY=your_daily_api_key
+
+# RAG API
+RAG_API_URL=http://localhost:8001/get_context
+
+# Interview Context (set by backend)
+INTERVIEW_CANDIDATE_NAME=John Doe
+INTERVIEW_COMPANY_NAME=TechCorp
+INTERVIEW_JOB_TITLE=Software Engineer
