--- a/pipecat-quickstart/env.example
+++ b/pipecat-quickstart/env.example
@@ -1,6 +1,14 @@
 DEEPGRAM_API_KEY=your_deepgram_api_key
-OPENAI_API_KEY=your_openai_api_key
+GOOGLE_API_KEY=your_google_api_key
 CARTESIA_API_KEY=your_cartesia_api_key
 
 # Optional: Connect via Daily WebRTC locally
 DAILY_API_KEY=your_daily_api_key
+
+# RAG API
+RAG_API_URL=youy_rag_url
+
+# Interview Context (set by backend)
+INTERVIEW_CANDIDATE_NAME=John Doe
+INTERVIEW_COMPANY_NAME=TechCorp
+INTERVIEW_JOB_TITLE=Software Engineer
