Video Generation Successful

--- a/pipecat-quickstart/env.example
+++ b/pipecat-quickstart/env.example
@@ -5,8 +5,12 @@ CARTESIA_API_KEY=your_cartesia_api_key
 # Optional: Connect via Daily WebRTC locally
 DAILY_API_KEY=your_daily_api_key
 
+# Tavus AI Avatar
+TAVUS_API_KEY=your_tavus_api_key
+TAVUS_REPLICA_ID=your_replica_id
+
 # RAG API
-RAG_API_URL=youy_rag_url
+RAG_API_URL=http://127.0.0.1:8001/get_context
 
 # Interview Context (set by backend)
 INTERVIEW_CANDIDATE_NAME=John Doe
