--- a/pipecat-quickstart/.env
+++ b/pipecat-quickstart/.env
@@ -16,3 +16,6 @@ RAG_API_URL=http://localhost:8001/get_context
 INTERVIEW_CANDIDATE_NAME=John Doe
 INTERVIEW_COMPANY_NAME=TechCorp
 INTERVIEW_JOB_TITLE=Software Engineer
+INTERVIEW_ID= #dynamic hai ye
+#Backend API
+BACKEND_API_URL=http://127.0.0.1:8000
