--- a/pipecat-quickstart/pyproject.toml
+++ b/pipecat-quickstart/pyproject.toml
@@ -5,7 +5,8 @@ description = "Quickstart example for building voice AI bots with Pipecat"
 requires-python = ">=3.10"
 dependencies = [
     "pipecat-ai[webrtc,daily,silero,deepgram,google,cartesia,tavus,local-smart-turn-v3,runner]",
-    "pipecat-ai-cli"
+    "pipecat-ai-cli",
+    "supabase"
 ]
 
 [dependency-groups]
