--- a/pipecat-quickstart/pyproject.toml
+++ b/pipecat-quickstart/pyproject.toml
@@ -7,7 +7,8 @@ dependencies = [
     "pipecat-ai[webrtc,daily,silero,deepgram,google,cartesia,tavus,local-smart-turn-v3,runner]",
     "pipecat-ai-cli",
     "supabase",
-    "websockets"
+    "websockets",
+    "google.generativeai"
 ]
 
 [dependency-groups]
